First implementation orders component

--- a/UI-NewVision/UI-NewVision/src/app/home/home.component.html
+++ b/UI-NewVision/UI-NewVision/src/app/home/home.component.html
@@ -3,11 +3,11 @@
     <h1> New Vision Manager</h1>
 </header>
 
-<div class="flex flex-col items-centers">
-    <h3 class="my-2">¿Qué quieres hacer?</h3>
+<div class="flex flex-col items-centers mt-10">
+    <h2 class="my-2">¿Qué quieres hacer?</h2>
     
-    <p>Ir a ordenes</p>
-    <p>Ir a clientes</p>
-    <p>Ir a proveedores</p>
+    <p class="u-pointer hover:underline"  routerLink="/orders">Ir a ordenes</p>
+    <p class="u-pointer hover:underline" routerLink="/providers">Ir a clientes</p>
+    <p class="u-pointer hover:underline" routerLink="/clients">Ir a proveedores</p>
 
 </div>
