--- a/UI-NewVision/UI-NewVision/src/app/orders/orders.component.html
+++ b/UI-NewVision/UI-NewVision/src/app/orders/orders.component.html
@@ -1,1 +1,23 @@
-<p>orders works!</p>
+<div class="flex items-center" routerLink="/">
+    <span>Go home</span>
+    <i class="ml-2 pi pi-arrow-left" ></i>
+</div>
+
+<p-table [value]="orders" [tableStyle]="{ 'min-width': '50rem' }">
+    <ng-template pTemplate="header">
+        <tr>
+            <th>Code</th>
+            <th>Name</th>
+            <th>Category</th>
+            <th>Quantity</th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-product>
+        <tr>
+            <td>{{ product.code }}</td>
+            <td>{{ product.name }}</td>
+            <td>{{ product.category }}</td>
+            <td>{{ product.quantity }}</td>
+        </tr>
+    </ng-template>
+</p-table>
